# serializer version: 1
# name: TestAnalyze.test_ok
  dict({
    'created_at': '2015-10-06T20:00:00Z',
    'files': list([
    ]),
    'id': 1,
    'index': dict({
      'id': 1,
      'version': 4,
    }),
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 2,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'pathoscope',
    }),
    'ready': False,
    'reference': dict({
      'data_type': 'genome',
      'id': 1,
      'name': 'Test Reference',
    }),
    'results': None,
    'sample': dict({
      'id': 1,
    }),
    'subtractions': list([
      dict({
        'id': 1,
        'name': 'Subtraction 1',
      }),
    ]),
    'updated_at': '2015-10-06T20:00:00Z',
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflow': 'pathoscope',
  })
# ---
# name: TestFinalize.test_quality
  dict({
    'all_read': True,
    'all_write': False,
    'artifacts': list([
    ]),
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': False,
    'hold': True,
    'host': '',
    'id': 1,
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Result',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': dict({
      'bases': list([
        list([
          1543,
        ]),
      ]),
      'composition': list([
        list([
          6372,
        ]),
      ]),
      'count': 7069,
      'encoding': 'OuBQPPuwYimrxkNpPWUx',
      'gc': 34222440,
      'length': list([
        3237,
      ]),
      'sequences': list([
        7091,
      ]),
    }),
    'reads': list([
    ]),
    'ready': True,
    'subtractions': list([
    ]),
    'uploads': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'ready': True,
        'removed': True,
        'removed_at': '2015-10-06T20:00:00Z',
        'reserved': True,
        'size': 723988,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'none',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: TestUploadArtifact.test_ok
  dict({
    'id': 1,
    'name': 'small.fq.gz',
    'name_on_disk': 'small.fq.gz',
    'sample': '1',
    'sample_id': 1,
    'size': 723988,
    'type': 'fastq',
    'uploaded_at': '2015-10-06T20:00:00Z',
  })
# ---
# name: TestUploadReads.test[409]
  dict({
    'id': 'conflict',
    'message': 'Reads file name is already uploaded for this sample',
  })
# ---
# name: TestUploadReads.test_empty
  dict({
    'id': 'bad_request',
    'message': 'Reads file is empty',
  })
# ---
# name: TestUploadReads.test_uncompressed
  dict({
    'id': 'bad_request',
    'message': 'File is not compressed',
  })
# ---
# name: test_find_analyses
  dict({
    'documents': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'index': dict({
          'id': 1,
          'version': 2,
        }),
        'job': None,
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 1,
          'name': 'Reference',
        }),
        'sample': dict({
          'id': 1,
        }),
        'subtractions': list([
          dict({
            'id': 1,
            'name': 'Malus domestica',
          }),
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'pathoscope',
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'index': dict({
          'id': 1,
          'version': 2,
        }),
        'job': None,
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 2,
          'name': 'Reference',
        }),
        'sample': dict({
          'id': 1,
        }),
        'subtractions': list([
          dict({
            'id': 1,
            'name': 'Malus domestica',
          }),
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'index': dict({
          'id': 1,
          'version': 2,
        }),
        'job': dict({
          'created_at': '2015-10-06T20:00:00Z',
          'id': 1,
          'progress': 0,
          'state': 'running',
          'user': dict({
            'handle': 'myersmitchell',
            'id': 2,
          }),
          'workflow': 'pathoscope',
        }),
        'ready': True,
        'reference': dict({
          'data_type': 'genome',
          'id': 2,
          'name': 'Reference',
        }),
        'sample': dict({
          'id': 1,
        }),
        'subtractions': list([
        ]),
        'updated_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'myersmitchell',
          'id': 2,
        }),
        'workflow': 'pathoscope',
      }),
    ]),
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
